Fixed hidden class not showing

--- a/src/style.css
+++ b/src/style.css
@@ -74,3 +74,7 @@ footer {
   line-height: 15px;
   padding: 30px;
 }
+
+.hidden {
+  display: none;
+}
